[tech] provided policy repository layer
